tests/invalids/invalidArray3.gt
proc main ()
    int a[1.5]
begin 
    read m;
end
